--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.0",
     "tailwindcss": "^3.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/sortablejs": "^1.15.2",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
